--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ html {
   }
 
 body {
-    font-family: "Raleway", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-    margin: 1% 3%;
+    margin: 0%;
     background-color: #ccffcc;
     color: #00994db9;
     box-sizing: border-box;
@@ -30,7 +30,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: azure;
+    background-color: #0F1F38;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.75rem;
     font-weight: bold;
@@ -44,20 +44,48 @@ body {
 .header li a {
     text-transform: uppercase;
     text-decoration: none;
-    color: #00994d;
+    color: rgb(165, 148, 141);
 }
 
-@media only screen and (max-width: 550px) {
-    .header {
-      flex-direction: column;
-    }
 
+/* Banner */
 .banner { 
     display: flex;
-    justify-content: center;
-    align-items: center
+    justify-content: left;
+    align-items: bottom;
+    padding: 4%;
+    height: 39rem;
+    background: url("http://devlinphotos.co.uk/wp-content/uploads/2016/01/Frames-and-Albums-Devlin-Photos-010-1080x675.jpg") center center no-repeat;
+    background-size: cover;
+    background-color: #0F1F38;
+    color:rgb(255, 69, 56);
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .banner h1 {
-    font-family: 'ZCOOL XiaoWei', serif;
+    padding top: 0.3rem 0;
+    font-size: 8rem;
+    letter-spacing: 1%;
+}
+
+.banner h2 {
+  padding-top:17.7rem;
+  justify-content: left;
+  font-size: 3rem;
+}
+
+
+
+/* Footer */
+
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: bottom;
+  padding: 0 1%;
+  background-color: #212121;
+}
+
+footer .image-container {
+  width: 400px;
 }
